# GTestExample

./: CMakeLists.txt
include/: CMakeLists.txt  ITurtle.h  Shape.h
source/: CMakeLists.txt  Painter.cpp  Shape.cpp  main.cpp
tests/: CMakeLists.txt  MockTurtle.h  PainterTest.cpp  ShapeTest.cpp  main.cpp
